html beginning to populate

--- a/layout.html
+++ b/layout.html
@@ -22,13 +22,13 @@
                 <h3 class="panel-title">Word to guess</h3>
             </div>
             <div class="panel-body">
-                <h2>_ _ _ _ _</h2>
+                <h2 id="wordToGuess">_ _ _ _ _</h2>
             </div>
         </div>
 
         <div class="panel panel-default">
             <div class="panel-body">
-                Letters Guessed: <span id="numGuesses"></span>
+                Letters Guessed: <span id="wrongGuesses"></span>
             </div>
         </div>
 
@@ -52,7 +52,7 @@
 
         <div class="panel panel-default">
             <div class="panel-body">
-                Lose Counter: <span id="loseCounter"></span>
+                Lose Counter: <span id="lossCounter"></span>
             </div>
         </div>
 
